Fix T42858: Non uniform gamelogic names on copy

Use generic function for consistent behavior

D949 by @lordloki